<resources>
    <string name="app_name">CurrencyConverter</string>
    <string name="sign_up">Sign Up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calculator">Calculator</string>
    <string name="currency">Currency</string>
    <string name="full_stop">.</string>
    <string name="past_30_days">Past 30 days</string>
    <string name="past_90_days">Past 90 days</string>
    <string name="full_stop_text">Full Stop</string>
    <string name="first_currency_code">EUR</string>
    <string name="first_currency_value">1</string>
    <string name="second_currency_code">PLN</string>
    <string name="second_currency_value">4.285</string>
    <string name="information_one"><u>Mid-market exchange rate at 13.78 UTC</u></string>
    <string name="information_two"><u>Get rate alerts straight to your email inbox</u></string>
</resources>