<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/graph_page_body"
    tools:context="ui.converter.GraphFragment">

    <TextView
        android:id="@+id/past30days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/past_30_days"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/past90days"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/past90days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:text="@string/past_90_days"
        android:textColor="@color/silver"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/past30days"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/fullStop"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/circle"
        app:layout_constraintEnd_toEndOf="@+id/past30days"
        app:layout_constraintStart_toStartOf="@+id/past30days"
        app:layout_constraintTop_toBottomOf="@+id/past30days"
        android:contentDescription="@string/full_stop_text" />

    <com.project.currencyconverter.data.util.CurveGraphDrawable
        android:id="@+id/cgv"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullStop" />

    <TextView
        android:id="@+id/alert_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="100dp"
        android:text="@string/information_two"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cgv" />

</androidx.constraintlayout.widget.ConstraintLayout>