<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculatorFragment">

    <ImageView
        android:id="@+id/menu"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_mollo_nav" />

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/causten_extra_bold"
        android:text="@string/sign_up"
        android:textAlignment="viewEnd"
        android:textColor="@color/caribbean_green"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/menu"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/causten_extra_bold"
        android:text="@string/currency"
        android:textColor="@color/navy_blue"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu" />

    <TextView
        android:id="@+id/calculator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/causten_extra_bold"
        android:text="@string/calculator"
        android:textColor="@color/navy_blue"
        android:textSize="48sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currency" />

    <TextView
        android:id="@+id/full_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/causten_extra_bold"
        android:text="@string/full_stop"
        android:textColor="@color/caribbean_green"
        android:textSize="48sp"
        app:layout_constraintStart_toEndOf="@+id/calculator"
        app:layout_constraintTop_toBottomOf="@+id/currency" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/first_currency"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/text_body"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculator">

        <EditText
            android:id="@+id/first_currency_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@null"
            android:ems="10"
            android:fontFamily="@font/causten_medium"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:padding="10dp"
            android:text="@string/first_currency_value"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/first_currency_code"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/first_currency_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/causten_extra_bold"
            android:text="@string/first_currency_code"
            android:textAlignment="viewEnd"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/first_currency_value"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/second_currency"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/text_body"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_currency">

        <EditText
            android:id="@+id/second_currency_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@null"
            android:ems="10"
            android:fontFamily="@font/causten_medium"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:padding="10dp"
            android:text="@string/second_currency_value"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/second_currency_code"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/second_currency_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/causten_extra_bold"
            android:text="@string/second_currency_code"
            android:textAlignment="viewEnd"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/second_currency_value"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.skydoves.powerspinner.PowerSpinnerView
        android:id="@+id/currency_one"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/causten_extra_bold"
        android:foreground="@drawable/spinner_body"
        android:gravity="center"
        android:hint="@string/first_currency_code"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/silver"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/second_currency"
        app:spinner_arrow_animate="true"
        app:spinner_arrow_drawable="@drawable/ic_down"
        app:spinner_arrow_gravity="end"
        app:spinner_arrow_padding="5dp"
        app:spinner_arrow_show="true"
        app:spinner_arrow_tint="@color/black"
        app:spinner_popup_animation="dropdown"
        app:spinner_popup_background="@color/white"
        app:spinner_popup_elevation="14dp"
        app:spinner_popup_height="150dp"
        app:spinner_popup_width="350dp" />

    <com.skydoves.powerspinner.PowerSpinnerView
        android:id="@+id/currency_two"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/causten_extra_bold"
        android:foreground="@drawable/spinner_body"
        android:gravity="center"
        android:hint="@string/second_currency_code"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/silver"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/second_currency"
        app:spinner_arrow_animate="true"
        app:spinner_arrow_drawable="@drawable/ic_down"
        app:spinner_arrow_gravity="end"
        app:spinner_arrow_padding="5dp"
        app:spinner_arrow_show="true"
        app:spinner_arrow_tint="@color/black"
        app:spinner_popup_animation="dropdown"
        app:spinner_popup_background="@color/white"
        app:spinner_popup_elevation="14dp"
        app:spinner_popup_height="150dp"
        app:spinner_popup_width="350dp" />

    <ImageView
        android:id="@+id/data_conversion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:src="@drawable/ic_data_transfer"
        app:layout_constraintEnd_toStartOf="@+id/currency_two"
        app:layout_constraintStart_toEndOf="@+id/currency_one"
        app:layout_constraintTop_toBottomOf="@+id/second_currency" />

    <Button
        android:id="@+id/convert"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:text="Convert"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currency_one" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:text="@string/information"
        android:textAlignment="center"
        android:textColor="@color/doger_blue"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/convert" />
</androidx.constraintlayout.widget.ConstraintLayout>